# ordo

./: .gitignore  Doxyfile  FAQ.md  LICENSE  README.md  app.c  app.h  build.bat  build.sh  config.c  config.h  database.c  database.h  dracula.theme  error.h  git-commit.sh  i18n.c  i18n.h  input.c  input.h  main.c  meson.build  meson_options.txt  ordo-importer.c  ordo.desktop.in  ordo.rc  platform_utils.c  platform_utils.h  run-clang-tidy.sh  settings_ui.c  settings_ui.h  solarized.theme  task.h  task_list.c  task_list.h  theme.c  theme.h  ui.c  ui.h  undo_manager.c  (+3 more)
langs/: de.lang  en.lang  es.lang  it.lang  ja.lang  la.lang  pt.lang  ru.lang
themes/: aura.theme  ayu_dark.theme  catppuccin_frappe.theme  catppuccin_latte.theme  catppuccin_macchiato.theme  catppuccin_mocha.theme  cobalt.theme  cyberpunk.theme  dracula.theme  edge.theme  everforest_dark.theme  everforest_light.theme  firecode.theme  github_dark.theme  gruvbox_dark.theme  hyper.theme  kanagawa.theme  material.theme  matrix.theme  monokai.theme  my_theme.theme  night_owl.theme  nord.theme  oceanic_next.theme  one_dark.theme  ordo_classic.theme  panda.theme  rose_pine.theme  rose_pine_dawn.theme  rose_pine_moon.theme  solarized_dark.theme  solarized_light.theme  sonokai.theme  synthwave_84.theme  tokyo_night.theme  tokyo_night_light.theme  tokyo_night_storm.theme  tomorrow_night.theme  vscode_dark_plus.theme  winter_is_coming.theme  (+1 more)
